--- a/catalog.html
+++ b/catalog.html
@@ -60,7 +60,7 @@
                 Новинки
             </p>
             <div class="grid grid-cols-3 gap-10 lg:grid-cols-1 place-items-center items-center ">
-                <div class="py-10 px-[94px] bg-primary max-w-fit rounded-2xl flex flex-col flex-nowrap sm:px-[25px] sm:items-center">
+                <div class="py-10 px-[94px] bg-primary max-w-fit rounded-2xl flex flex-col flex-nowrap sm:px-[25px] sm:items-center ad:px-[15px]">
                     <img class="max-w-[220px]" src="/lolipop/img/hqd-hero.png" alt="">
                     <div class="mt-[100px] items-center">
                         <h4 class="text-white font-bold text-xl uppercase">hgd pinapple</h4>
@@ -74,7 +74,7 @@
                     </div>
                 </div>
 
-                <div class="py-10 px-[94px] bg-primary max-w-fit rounded-2xl flex flex-col flex-nowrap sm:px-[25px] sm:items-center">
+                <div class="py-10 px-[94px] bg-primary max-w-fit rounded-2xl flex flex-col flex-nowrap sm:px-[25px] sm:items-center ad:px-[15px]">
                     <img class="max-w-[220px]" src="/lolipop/img/hqd-hero.png" alt="">
                     <div class="mt-[100px] items-center">
                         <h4 class="text-white font-bold text-xl uppercase">hgd pinapple</h4>
@@ -88,7 +88,7 @@
                     </div>
                 </div>
 
-                <div class="py-10 px-[94px] bg-primary max-w-fit rounded-2xl flex flex-col flex-nowrap sm:px-[25px] sm:items-center">
+                <div class="py-10 px-[94px] bg-primary max-w-fit rounded-2xl flex flex-col flex-nowrap sm:px-[25px] sm:items-center ad:px-[15px]">
                     <img class="max-w-[220px]" src="/lolipop/img/hqd-hero.png" alt="">
                     <div class="mt-[100px] items-center">
                         <h4 class="text-white font-bold text-xl uppercase">hgd pinapple</h4>
